# fast_api

./: pyproject.toml
fast_zero/: app.py  schemas.py
tests/: html.test.py
